add_subdirectory(actions)
add_subdirectory(base)
add_subdirectory(components)
add_subdirectory(driver)
add_subdirectory(dvb)
add_subdirectory(dvb_ci)
add_subdirectory(fixup)
add_subdirectory(gdi)
add_subdirectory(gui)
add_subdirectory(mmi)
add_subdirectory(nav)
add_subdirectory(network)
add_subdirectory(python)
add_subdirectory(service)
#add_subdirectory(tests)
